[tool.poetry]
name = "repl_python3_Cosmetics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
discord = "^1.7.3"
python-dotenv = "^0.19.0"
replit = "^3.2.4"
Flask = "^2.0.1"
better-profanity = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
